syntax = "proto3";

package identity.v1;

option go_package = "github.com/kakke18/platform-security-poc/backend/gen/identity/v1;identityv1";

// WorkspaceUserService は Workspace User の管理を担当するサービス
service WorkspaceUserService {
  // GetWorkspaceUser は現在認証されているユーザーの Workspace User 情報を取得する
  // X-Auth0-User-ID ヘッダーから Auth0 User ID を取得して、対応する Workspace User を返す
  rpc GetWorkspaceUser(GetWorkspaceUserRequest) returns (GetWorkspaceUserResponse);

  // ListWorkspaceUsers はワークスペース内のユーザー一覧を取得する
  rpc ListWorkspaceUsers(ListWorkspaceUsersRequest) returns (ListWorkspaceUsersResponse);
}

// GetWorkspaceUserRequest は GetWorkspaceUser のリクエスト
message GetWorkspaceUserRequest {
  // 空 - X-Auth0-User-ID ヘッダーから Auth0 User ID を取得
}

// GetWorkspaceUserResponse は GetWorkspaceUser のレスポンス
message GetWorkspaceUserResponse {
  // workspace_id はワークスペースID
  string workspace_id = 1;

  // workspace_user_id はワークスペースユーザーID
  string workspace_user_id = 2;

  // email はメールアドレス
  string email = 3;

  // name は表示名
  string name = 4;
}

// ListWorkspaceUsersRequest は ListWorkspaceUsers のリクエスト
message ListWorkspaceUsersRequest {
  // page_size はページサイズ
  int32 page_size = 1;

  // page_token はページトークン
  string page_token = 2;
}

// WorkspaceUser はワークスペースユーザー情報
message WorkspaceUser {
  // workspace_user_id はワークスペースユーザーID
  string workspace_user_id = 1;

  // email はメールアドレス
  string email = 2;

  // name は表示名
  string name = 3;
}

// ListWorkspaceUsersResponse は ListWorkspaceUsers のレスポンス
message ListWorkspaceUsersResponse {
  // users はユーザー情報のリスト
  repeated WorkspaceUser users = 1;

  // next_page_token は次のページトークン
  string next_page_token = 2;
}
